# lab-3-polaris

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_qa.txt
.github/workflows/: codestyle.yaml
notebooks/: lab3_eda.ipynb
src/: pipeline.py
src/common/: config.py  utils.py
src/delta/: ops.py
src/layers/: bronze.py  gold.py  silver.py
src/ml/: models.py
src/scripts/: simulate_year_batches.py
